--- a/InzApp/templates/InzApp/pola_wyszukiwania.html
+++ b/InzApp/templates/InzApp/pola_wyszukiwania.html
@@ -1,7 +1,7 @@
 {% extends 'InzApp/layout.html' %}
 
 	{% block tytul %}
-	Pola wyszukiwania
+	Wyszukiwarka publikacji
 	{% endblock %}
 	
 	{% block uzytkownik_zalogowany %}
@@ -9,7 +9,7 @@
 	{% endblock %}
 	
 	{% block naglowek %}
-	Pola wyszukiwania
+	Wyszukiwarka publikacji
 	{% endblock %}
 	
 	{% block opis %}
