--- a/InzApp/templates/InzApp/wynik.html
+++ b/InzApp/templates/InzApp/wynik.html
@@ -54,12 +54,7 @@
 				</tr>
 				<tr>
 					<td>
-						<button onClick="document.location={% url 'strona_glowna' %}"><i class="fa fa-home"></i> Strona główna</button>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<button onClick="document.location={% url wynik.url_przekierowania %}"><i class="fa fa-arrow-left"></i> Powrót</button>
+						<a href="{% url 'strona_glowna' %}"><button><i class="fa fa-home"></i> Strona główna</button></a>
 					</td>
 				</tr>
 				
