--- a/InzApp/templates/InzApp/layout.html
+++ b/InzApp/templates/InzApp/layout.html
@@ -60,12 +60,16 @@
 						Strona główna</a></li>
 						<li><a href="{% url 'publikacje' 1 %}"><i class="fa fa-book fa-fw fa-lg"></i>
 						Publikacje</a></li>
-						<li><a href="{% url 'moje_publikacje' %}">Moje publikacje</a></li>
-						<li><a href="{% url 'dodaj_publikacje' %}">Dodaj publikację</a></li>
+						<li><a href="{% url 'moje_publikacje' %}"><i class="fa fa-key fa-fw fa-lg"></i>
+						Moje publikacje</a></li>
+						<li><a href="{% url 'dodaj_publikacje' %}"><i class="fa fa-plus fa-fw fa-lg"></i>
+						Dodaj publikację</a></li>
 						<li><a href="{% url 'kolekcje' %}"><i class="fa fa-object-group fa-fw fa-lg"></i>
 						Kolekcje</a></li>
-						<li><a href="{% url 'moje_kolekcje' %}">Moje kolekcje</a></li>
-						<li><a href="{% url 'dodaj_kolekcje' %}">Dodaj kolekcję</a></li>
+						<li><a href="{% url 'moje_kolekcje' %}"><i class="fa fa-key fa-fw fa-lg"></i>
+						Moje kolekcje</a></li>
+						<li><a href="{% url 'dodaj_kolekcje' %}"><i class="fa fa-plus fa-fw fa-lg"></i>
+						Dodaj kolekcję</a></li>
 						<li><a href="{% url 'autorzy' %}"><i class="fa fa-users fa-fw fa-lg"></i>
 						Autorzy</a></li>
 						<li><a href="{% url 'dodaj_autora' %}"><i class="fa fa-user-plus fa-fw fa-lg"></i>
